--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sums/common",
+    "name": "sower/common",
     "description": "公共类",
     "license": "Apache-2.0",
     "authors": [
